--- a/source/form.html
+++ b/source/form.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo logotype">
-        <img class="logotype__image" src="img/logo-mobile.svg" width="190px" height="38px" alt="Логотип Cat Energy">
+      <a href="time.html" class="page-header__logo logotype">
+        <img class="logotype__image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -42,12 +42,12 @@
       </fieldset>
       <fieldset class="form-programs">
       <div class="form-programs__wrapper">
-        <input class="form-programs__slim-input" name="programs" type="radio" id="slim" checked>
-        <label class="form-programs__slim" for="slim">похудение</label>
-        <input class="form-programs__mass-set-input" name="programs" type="radio" id="mass-set">
-        <label class="form-programs__mass-set" for="mass-set">набор массы</label>
-        <input class="form-programs__advice-input" name="programs" type="radio" id="advice">
-        <label class="form-programs__advice" for="advice">не знаю (нужен ваш совет)</label>
+        <input class="form-programs__input" name="programs" type="radio" id="slim" checked>
+        <label class="form-programs__label" for="slim">похудение</label>
+        <input class="form-programs__input" name="programs" type="radio" id="mass-set">
+        <label class="form-programs__label" for="mass-set">набор массы</label>
+        <input class="form-programs__input" name="programs" type="radio" id="advice">
+        <label class="form-programs__label" for="advice">не знаю (нужен ваш совет)</label>
       </div>
       </fieldset>
       <fieldset class="owner">
@@ -82,10 +82,10 @@
         <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="../img/bg-map-mobile@1x.png" width="320px" height="400px" alt="карта">
+        <img class="page-footer__map-image" src="../img/time.png" width="318" height="361" alt="карта">
       </a>
       <a href="index.html" class="page-footer__logo logotype">
-        <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128px" height="24px" alt="Логотип Cat Energy">
+        <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
       <div class="page-footer__social social">
         <ul class="social__list">
