--- a/source/index.html
+++ b/source/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
   <body>
 <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190px" height="38px" alt="Логотип Cat Energy">
+      <a href="time.html" class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -32,7 +31,6 @@
       <section class="description">
         <h1 class="description__title">Функциональное питание для котов</h1>
         <p class="description__paragraph">Занялся собой? Займись котом!</p>
-        <im class="description__image" src="https://via.placeholder.com/150x150" alt="Банка корма">
         <a href="form.html" class="description__link button">Подобрать программу</a>
       </section>
       <section class="programs">
@@ -53,7 +51,7 @@
       <h2 class="how-work__title">Как это работает</h2>
       <ul class="how-work__list">
         <li class="how-work__describe how-work__describe--foliage">Функциональное питание содержит только полезные питательные вещества.</li>
-        <li class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.<li>
+        <li class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
         <li class="how-work__describe how-work__describe--fork">Замените один-два приема обычной еды на наше функциональное питание.</li>
         <li class="how-work__describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
@@ -68,8 +66,8 @@
       </div>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
       <div class="example__images slider__list">
-      <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320px" height="240px" alt="Упитанный кот">
-      <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320px" height="240px" alt="Похудевший Борис">
+      <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320" height="240" alt="Упитанный кот">
+      <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320" height="240" alt="Похудевший Борис">
       </div>
        <p class="example__toggles slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
@@ -84,10 +82,10 @@
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
       <a class="page-footer__map">
-        <!--<img class="page-footer__map-image" src="../img/bg-map-mobile@1x.png" width="320px" height="363px" alt="карта">-->
+        <img class="page-footer__map-image" src="../img/time.png" width="318" height="361" alt="карта">
       </a>
-      <a class="page-footer__logo logotype">
-        <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128px" height="24px" alt="Логотип Cat Energy">
+      <a class="page-footer__logo">
+        <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
       <div class="page-footer__social social">
         <ul class="social__list">
