--- a/source/time.html
+++ b/source/time.html
@@ -2,17 +2,13 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Барбершоп «Бородинский»</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <header class="page-header">
-    <a class="page-header__logo"></a>
-    <nav class="nav-mock"></nav>
+  <header>
+    <a href="index.html">index</a>
+    <a href="form.html">form</a>
+    <a href="catalog.html">catalog</a>
   </header>
 
 </body>
