finished catalog the macrogrid

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -303,14 +303,12 @@
           </table>
           <a href="order.html" class="product__link button">Заказать</a>
         </li>
+        <li class="main-catalog__item product-show">
+          <b>показать еще 100500 товаров</b>
+          <p>На самом деле вкусов гораздо больше!</p>
+          <button type="button" class="product__link button button--gray">показать все</button>
+        </li>
       </ul>
-      <div class="main-catalog__product-show">
-        <b>показать еще 100500 товаров</b>
-        <p>На самом деле вкусов гораздо больше!</p>
-        <button type="button" class="product__link button button--gray">показать все</button>
-      </div>
-
-
       <section class="additional">
       <h2>Дополнительные товары</h2>
       <ul class="additional__list">
@@ -414,8 +412,8 @@
         <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="../img/time.png" width="318" height="361" alt="карта">
       </a>
+    <div class="page-footer__low">
       <a href="index.html" class="page-footer__logo logotype">
         <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
@@ -435,6 +433,7 @@
       <div class="page-footer__copyright">
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
+    </div>
     </footer>
   </body>
 </html>
