--- a/source/form.html
+++ b/source/form.html
@@ -86,14 +86,14 @@
       </fieldset>
      </form>
     </main>
-    <footer class="page-footer">
+<footer class="page-footer">
       <div class="page-footer__data">
         <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
         <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="../img/time.png" width="318" height="361" alt="карта">
       </a>
+    <div class="page-footer__low">
       <a href="index.html" class="page-footer__logo logotype">
         <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
@@ -113,6 +113,7 @@
       <div class="page-footer__copyright">
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
+    </div>
     </footer>
   </body>
 </html>
