--- a/source/index.html
+++ b/source/index.html
@@ -8,20 +8,20 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-<header class="page-header">
-      <a href="time.html" class="page-header__logo">
+    <header class="page-header">
+      <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list visually-hidden">
-          <li class="site-list__item site-list__item--active">
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--active">
             <a>Главная</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav__item">
             <a href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav__item">
             <a href="form.html">Подбор программы</a>
           </li>
         </ul>
@@ -104,5 +104,7 @@
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
+
+    <script src="js/nav-toggle.js"></script>
   </body>
 </html>
