выровнили индекс мобайл

--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
-      </a>
+      <a class="page-header__logo"></a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
@@ -31,7 +29,7 @@
       <section class="description">
         <h1 class="description__title">Функциональное питание для котов</h1>
         <p class="description__paragraph">Занялся собой? Займись котом!</p>
-        <a href="form.html" class="description__link button">Подобрать программу</a>
+        <a href="form.html" class="description__link">Подобрать программу</a>
       </section>
       <section class="programs">
         <ul class="programs__list">
@@ -56,8 +54,8 @@
         <li class="how-work__describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
     </section>
-    <section class="example">
-      <div class="example__wrapper slider">
+  <section class="example">
+    <div class="example__wrapper slider">
       <h2 class="example__title">Живой пример</h2>
       <p class="example__history">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <div class="example__indicators">
@@ -70,15 +68,15 @@
       <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320" height="240" alt="Похудевший Борис">
       </div>
        <p class="example__toggles slider__toggles">
-            <button class="slider__toggle" type="button">Было</button>
-            <button class="slider__toggle" type="button">Стало</button>
+            <button class="slider__toggle slider__toggle--btn1" type="button">Было</button>
+            <button class="slider__toggle slider__toggle--btn2" type="button">Стало</button>
         </p>
-      </div>
-    </section>
+    </div>
+  </section>
     </main>
     <footer class="page-footer">
     <div class="page-footer__data">
-      <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="page-footer__invitation">Приглашаем<br> к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
       <a class="page-footer__map">
