--- a/source/index.html
+++ b/source/index.html
@@ -58,11 +58,13 @@
     <div class="example__wrapper slider">
       <h2 class="example__title">Живой пример</h2>
       <p class="example__history">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+    <div class="example__preface">
       <div class="example__indicators">
       <p><b>5 кг</b><small>снижение веса</small></p>
       <p><b>60 дней</b><small>затрачено времени</small></p>
       </div>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
+    </div>
       <div class="example__images slider__list">
       <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320" height="240" alt="Упитанный кот">
       <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320" height="240" alt="Похудевший Борис">
