--- a/source/index.html
+++ b/source/index.html
@@ -57,6 +57,7 @@
   <section class="example">
     <div class="example__wrapper slider">
       <h2 class="example__title">Живой пример</h2>
+  <div class="example__desktop-grid1">
       <p class="example__history">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
     <div class="example__preface">
       <div class="example__indicators">
@@ -65,6 +66,8 @@
       </div>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
     </div>
+  </div>
+  <div class="example__desktop-grid2">
       <div class="example__images slider__list">
       <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320" height="240" alt="Упитанный кот">
       <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320" height="240" alt="Похудевший Борис">
@@ -73,6 +76,7 @@
             <button class="slider__toggle slider__toggle--btn1" type="button">Было</button>
             <button class="slider__toggle slider__toggle--btn2" type="button">Стало</button>
         </p>
+       </div>
     </div>
   </section>
     </main>
