--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,6 +30,7 @@
       <ul class="main-catalog__list">
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/chicken-small-desktop@1x.png">
           <source media="(min-width: 768px)" srcset="../img/chicken-small-tablet@1x.png">
           <img class="product__image product__image--pro-chicken500" src="../img/chicken-small-mobile@1x.jpg" width="140" height="144"  alt="корм для котов">
         </picture>
@@ -72,6 +73,7 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/chicken-big-desktop@1x.png">
           <source media="(min-width: 768px)" srcset="../img/chicken-big-tablet@1x.png">
           <img class="product__image product__image--pro-chicken1000" src="../img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
         </picture>
@@ -114,6 +116,7 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/fish-small-desktop@1x.png">
           <source media="(min-width: 768px)" srcset="../img/fish-small-tablet@1x.png">
           <img class="product__image product__image--pro-fish500" src="../img/fish-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
         </picture>
@@ -156,6 +159,7 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/fish-big-desktop@1x.png">
           <source media="(min-width: 768px)" srcset="../img/fish-big-tablet@1x.png">
           <img class="product__image product__image--pro-fish1000" src="../img/fish-big-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
         </picture>
@@ -198,6 +202,7 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/buckwheat-small-desktop@1x.png">
           <source media="(min-width: 768px)" srcset="../img/buckwheat-small-tablet@1x.png">
           <img class="product__image product__image--slim-buckwheat500" src="../img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
         </picture>
@@ -240,6 +245,7 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/buckwheat-big-desktop@1x.png">
           <source media="(min-width: 768px)" srcset="../img/buckwheat-big-tablet@1x.png">
           <img class="product__image product__image--slim-buckwheat1000" src="../img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
         </picture>
@@ -282,6 +288,7 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
+          <source media="(min-width: 1220px)" srcset="../img/rice-small-tablet@1x.png">
           <source media="(min-width: 768px)" srcset="../img/rice-small-tablet@1x.png">
           <img class="product__image product__image--slim-rice500" src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
           <h3>cat energy slim 500 г</h3>
@@ -353,7 +360,7 @@
               <a href="order.html" class="product-add__link button">Заказать</a>
         </li>
         <li class="additional__item product-add">
-          <h3>Питевая вода</h3>
+          <h3>Питьевая вода</h3>
           <table class="product-add__table">
                 <tr>
                   <th class="visually-hidden">
@@ -420,18 +427,17 @@
         </li>
       </ul>
       <div class="additional__gift">
-        <p>Закажите все и получите чехол для кота в подарок!</p>
+        <p>Закажите все<br> и получите чехол для кота в подарок!</p>
       </div>
     </section>
     </main>
-<footer class="page-footer">
+    <footer class="page-footer">
     <div class="page-footer__data">
-      <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="page-footer__invitation">Приглашаем<br> к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
-      <a class="page-footer__map">
-        <img class="page-footer__map-image" src="../img/time.png" width="318" height="361" alt="карта">
-      </a>
+      <a class="page-footer__map"></a>
+    <div class="page-footer__low">
       <a class="page-footer__logo">
         <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
@@ -451,6 +457,7 @@
       <div class="page-footer__copyright">
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
+    </div>
     </footer>
 
     <script src="js/nav-toggle.js"></script>
