--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo"></a>
+      <a class="page-header__logo">
+       <picture>
+        <source media="(min-width: 1220px)" srcset="../img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
+        <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
+       </picture>
+      </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
@@ -85,7 +91,13 @@
       <p class="page-footer__invitation">Приглашаем<br> к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
-      <a class="page-footer__map"></a>
+      <a class="page-footer__map">
+      <picture>
+        <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+        <img class="page-footer__map-image" src="../img/time.png" srcset="../img/time2.png 2x" width="318" height="361" alt="наш адресс">
+      </picture>
+      </a>
     <div class="page-footer__low">
       <a class="page-footer__logo">
         <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
