--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -9,15 +9,21 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo"></a>
+      <a class="page-header__logo">
+       <picture>
+        <source media="(min-width: 1220px)" srcset="../img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
+        <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
+       </picture>
+      </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a href="index.html" class="main-nav__link">Главная</a>
+          <li class="main-nav__item">
+            <a  href="index.html" class="main-nav__link main-nav__link--active">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">Каталог продукции</a>
+            <a class="main-nav__link">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a href="form.html" class="main-nav__link">Подбор программы</a>
@@ -30,9 +36,9 @@
       <ul class="main-catalog__list">
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/chicken-small-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/chicken-small-tablet@1x.png">
-          <img class="product__image product__image--pro-chicken500" src="../img/chicken-small-mobile@1x.jpg" width="140" height="144"  alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+          <img class="product__image product__image--pro-chicken500" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144"  alt="корм для котов">
         </picture>
           <h3>cat energy pro 500 г</h3>
           <table class="product__table">
@@ -291,6 +297,7 @@
           <source media="(min-width: 1220px)" srcset="../img/rice-small-tablet@1x.png">
           <source media="(min-width: 768px)" srcset="../img/rice-small-tablet@1x.png">
           <img class="product__image product__image--slim-rice500" src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+        </picture>
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
             <tr>
@@ -431,12 +438,18 @@
       </div>
     </section>
     </main>
-    <footer class="page-footer">
+<footer class="page-footer">
     <div class="page-footer__data">
       <p class="page-footer__invitation">Приглашаем<br> к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
-      <a class="page-footer__map"></a>
+      <a class="page-footer__map">
+      <picture>
+        <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+        <img class="page-footer__map-image" src="../img/time.png" srcset="../img/time2.png 2x" width="318" height="361" alt="наш адресс">
+      </picture>
+      </a>
     <div class="page-footer__low">
       <a class="page-footer__logo">
         <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
