--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -57,7 +57,7 @@
         <li class="how-work__describe how-work__describe--foliage">Функциональное питание содержит только полезные питательные вещества.</li>
         <li class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
         <li class="how-work__describe how-work__describe--fork">Замените один-два приема обычной еды на наше функциональное питание.</li>
-        <li class="how-work__describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        <li class="how-work__describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</li>
       </ul>
     </section>
   <section class="example">
@@ -75,8 +75,18 @@
   </div>
   <div class="example__desktop-grid2">
       <div class="example__images slider__list">
-      <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320" height="240" alt="Упитанный кот">
-      <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320" height="240" alt="Похудевший Борис">
+    <picture>
+      <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+      <img class="slider__slide1" src="../img/before-mobile@1x.png" srcset="../img/before-mobile@2x.png 2x" width="320" height="240" alt="Упитанный кот">
+    </picture>
+      <!--
+    <picture>
+      <source media-"(min-width: 1220px)" srcset="../img/after-desktop@1x.png 1x, img/after-mobile@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+      <img class="slider__slide2" src="../img/after-mobile@1x.png" srcset="../img/after-mobile@2x.png 2x" width="320" height="240" alt="Похудевший Борис">
+    </picture>
+    -->
       </div>
        <p class="example__toggles slider__toggles">
             <button class="slider__toggle slider__toggle--btn1" type="button">Было</button>
