--- a/source/catalog.html
+++ b/source/catalog.html
@@ -79,9 +79,9 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/chicken-big-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/chicken-big-tablet@1x.png">
-          <img class="product__image product__image--pro-chicken1000" src="../img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+          <img class="product__image product__image--pro-chicken1000" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="корм для котов">
         </picture>
           <h3>cat energy pro 1000 г</h3>
           <table class="product__table">
@@ -122,9 +122,9 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/fish-small-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/fish-small-tablet@1x.png">
-          <img class="product__image product__image--pro-fish500" src="../img/fish-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+          <img class="product__image product__image--pro-fish500" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="корм для котов">
         </picture>
           <h3>cat energy pro 500 г</h3>
           <table class="product__table">
@@ -165,9 +165,9 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/fish-big-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/fish-big-tablet@1x.png">
-          <img class="product__image product__image--pro-fish1000" src="../img/fish-big-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+          <img class="product__image product__image--pro-fish1000" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="корм для котов">
         </picture>
           <h3>cat energy pro 1000 г</h3>
           <table class="product__table">
@@ -208,9 +208,9 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/buckwheat-small-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/buckwheat-small-tablet@1x.png">
-          <img class="product__image product__image--slim-buckwheat500" src="../img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+          <img class="product__image product__image--slim-buckwheat500" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="корм для котов">
         </picture>
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
@@ -251,9 +251,9 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/buckwheat-big-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/buckwheat-big-tablet@1x.png">
-          <img class="product__image product__image--slim-buckwheat1000" src="../img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+          <img class="product__image product__image--slim-buckwheat1000" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="корм для котов">
         </picture>
           <h3>cat energy slim 1000 г</h3>
           <table class="product__table">
@@ -294,9 +294,9 @@
         </li>
         <li class="main-catalog__item product">
         <picture>
-          <source media="(min-width: 1220px)" srcset="../img/rice-small-tablet@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/rice-small-tablet@1x.png">
-          <img class="product__image product__image--slim-rice500" src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="корм для котов">
+          <source media="(min-width: 1220px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+          <img class="product__image product__image--slim-rice500" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="корм для котов">
         </picture>
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
