--- a/source/form.html
+++ b/source/form.html
@@ -10,18 +10,24 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo"></a>
+      <a class="page-header__logo">
+       <picture>
+        <source media="(min-width: 1220px)" srcset="../img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
+        <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
+       </picture>
+      </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a href="index.html" class="main-nav__link">Главная</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active">Главная</a>
           </li>
           <li class="main-nav__item">
             <a href="catalog.html" class="main-nav__link">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">Подбор программы</a>
+            <a href="form.html" class="main-nav__link">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -86,12 +92,18 @@
       </fieldset>
      </form>
     </main>
-<footer class="page-footer">
+    <footer class="page-footer">
     <div class="page-footer__data">
       <p class="page-footer__invitation">Приглашаем<br> к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
-      <a class="page-footer__map"></a>
+      <a class="page-footer__map">
+      <picture>
+        <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+        <img class="page-footer__map-image" src="../img/time.png" srcset="../img/time2.png 2x" width="318" height="361" alt="наш адресс">
+      </picture>
+      </a>
     <div class="page-footer__low">
       <a class="page-footer__logo">
         <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
