--- a/source/form.html
+++ b/source/form.html
@@ -61,6 +61,7 @@
       </fieldset>
     </div>
       <fieldset class="owner">
+      <div class="owner__wrapper">
         <legend class="owner__legend">Контактные данные (владельца кота)</legend>
         <div class="owner__container">
         <label class="owner__email" for="email">e-mail:<sup>*</sup></label>
@@ -68,14 +69,18 @@
         <label class="owner__tel" for="tel">телефон:<sup>*</sup></label>
         <input class="owner__tel-input" id="tel" name="tel" type="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
       </div>
+    </div>
       </fieldset>
       <fieldset class="comment">
+      <div class="comment__wrapper">
       <legend class="comment__legend">Комментарий</legend>
     <div class="comment__container">
       <textarea class="comment__texterea" rows="5" id="comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
     </div>
+    </div>
       </fieldset>
       <fieldset class="additionally">
+      <div class="additionally__wrapper">
         <legend class="additionally__legend">Дополнительно</legend>
       <div class="additionally__container">
         <input class="additionally__substitute-input visually-hidden" name="substitute" type="checkbox" id="substitute" checked>
@@ -87,8 +92,9 @@
         <input class="additionally__vitamins-input visually-hidden" name="vitamins" type="checkbox" id="vitamins">
         <label class="additionally__vitamins" for="vitamins">витамины</label>
         <button class="additionally__button button">Отправить заявку</button>
-        <small><sup>*</sup>&mdash; Обязательные поля</small>
+        <small><sup>*</sup> &mdash; Обязательные поля</small>
       </div>
+    </div>
       </fieldset>
      </form>
     </main>
