--- a/source/index.html
+++ b/source/index.html
@@ -138,6 +138,7 @@
       </div>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
     </div>
+    </div>
   </div>
   <div class="example__desktop-grid2">
       <div class="example__images slider__list">
@@ -167,7 +168,6 @@
             <button class="slider__toggle slider__toggle--btn2" type="button">Стало</button>
         </p>
        </div>
-    </div>
   </section>
     </main>
     <footer class="page-footer">
@@ -179,7 +179,7 @@
       <picture>
         <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
         <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
-        <source type="image/webp" srcset="img/time1.webp 1x, img/time2.webp 2x">
+        <source type="image/webp" srcset="img/time.webp 1x, img/time2.webp 2x">
 
         <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
         <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
@@ -187,6 +187,7 @@
       </picture>
       </a>
     <div class="page-footer__low">
+      <div class="page-footer__low-container">
       <a class="page-footer__logo">
         <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </a>
@@ -206,6 +207,7 @@
       <div class="page-footer__copyright">
         <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
+    </div>
     </div>
     </footer>
 
