--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
+
+    <link rel="preload" href="/js/script.min.js" as="script">
+    <link rel="preload" href="/fonts/oswaldregular.woff2" as="font">
   </head>
 
   <body>
