работаем над главной

--- a/source/index.html
+++ b/source/index.html
@@ -319,7 +319,7 @@
             </div>
             <div class="example__toggles slider__toggles">
               <button class="slider__toggle slider__toggle--btn1" type="button">Было</button>
-              <div class="slider__out-scale"><span class="slider__into-scale"></span></div>
+              <div class="slider__out-scale"><button class="slider__into-scale"></button></div>
               <button class="slider__toggle slider__toggle--btn2" type="button">Стало</button>
             </div>
           </div>
