приступаем к последним шрихам каталога

--- a/source/form.html
+++ b/source/form.html
@@ -242,8 +242,8 @@
             </div>
             <label class="owner__tel" for="tel">телефон:<sup>*</sup>
             </label>
-            <div class="owner__input-wrapper owner__input-wrapper--error">
-              <input class="owner__tel-input owner__tel-input--error" id="tel" name="tel" type="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
+            <div class="owner__input-wrapper">
+              <input class="owner__tel-input" id="tel" name="tel" type="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
               <p><svg class="owner__phone-icon" width="20" height="20"><use xlink:href="#icon-phone"></use></svg></p>
             </div>
           </div>
