--- a/source/catalog.html
+++ b/source/catalog.html
@@ -583,7 +583,7 @@
         </ul>
         <div class="additional__gift">
           <svg class="additional__gift-svg" width="56" height="60"><use xlink:href="#icon-gift"></use></svg>
-          <p>Закажите все<br> и получите чехол для кота в подарок! огоосвоения этого материала устроиться на ста ого освоения этого материала устроиться на ста ого освоения этого материала устроиться на ста</p>
+          <p>Закажите все<br> и получите чехол для кота в подарок!</p>
         </div>
       </section>
     </main>
