--- a/source/form.html
+++ b/source/form.html
@@ -144,7 +144,7 @@
       <div class="page-footer__low">
         <div class="page-footer__low-container">
           <a class="page-footer__logo" href="index.html">
-            <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
+            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
           </a>
           <div class="page-footer__social social">
             <ul class="social__list">
