--- a/source/index.html
+++ b/source/index.html
@@ -163,7 +163,7 @@
       <div class="page-footer__low">
         <div class="page-footer__low-container">
           <a class="page-footer__logo">
-            <img class="page-footer__logo-image" src="../img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
+            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
           </a>
           <div class="page-footer__social social">
             <ul class="social__list">
